# CardGameTgBot

./: bot.py  config.py  database.py  pyproject.toml
migrations/: env.py
migrations/versions/: 8206fb4cb237_.py  e804ef51f097_.py
src/handlers/user_handler/: handler.py
src/keyboards/: main_menu.py
src/keyboards/user_keyboards/: keyboards.py
src/lexicon/: lexicon_ru.py
src/middlewares/: middlewares.py
src/models/: user.py
src/repositories/: sqlalchemy.py  user.py
src/schemas/: user.py
src/states/: states.py
src/utils/: utils.py
