[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
